2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Minor adjustements to icon positionning
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Changed google maps marker icons
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Added missing elements in XML exchange format
	* Stable v1.0 for XML exchange format and Google Maps mapping
	* Added GMaps constants to config file
	* Unsmartied index.php , added link to map
	* Check config.php to set corresponding values
	* You can now use hotspot_status.php?format=XML along with xslt query string parament to convert your XML document
	* For this to work, You need to have activated XSLT ( see config file )
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Added Google Maps mapping venues_map.php
	* /js/venues_status_map.js  JavaScript code for Mapping
	* In beta : tested successfuly with 48 nodes in the Montreal area, loads in a snap
	
2005-07-03 Francois Proulx <francois.proulx@gmail.com>
	* Updated the XML venues status format ( version 1.0, once approved )
	* Added long / lat fields to nodes table ( for mapping purposes )
	
2005-06-17 Francois Proulx <francois.proulx@gmail.com>
	* Added IFrame and SimpleIFrame content types.
	
2005-06-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* classes/Content/Langstring.php:  Bug fix:  Langstring was always non-persistent, no matter the checkbox.  Move the code to TrivialLangstring.php where it belongs. 

2005-06-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* portal/inted.php:  Implement the start button functionnality (maybe it would be better to call it
	 "use the Internet").  From now on, once authenticated and when pressing the start
	  button on the portal, the user will be sent to the page he originally tried to 
	  access.  A second window will be popped with the portal page so he can come back
	   to it. The window is collapsed, and can be expanded back by clicking on the link.