@@ -1,4 +1,7 @@
 2005-07-05 Francois Proulx <francois.proulx@gmail.com>
+	* Changed wording in hotspots status page added legend
+	
+2005-07-05 Francois Proulx <francois.proulx@gmail.com>
 	* Minor adjustements to icon positionning
 	
 2005-07-05 Francois Proulx <francois.proulx@gmail.com>
